--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,4 +34,46 @@
     <session-timeout>30</session-timeout>
   </session-config>
 
+  <welcome-file-list>
+    <welcome-file>loginALL.html</welcome-file>
+  </welcome-file-list>
+
+  <servlet>
+    <servlet-name>LoginAdmin</servlet-name>
+    <servlet-class>com.example.servlets.LoginAdmin</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginAdmin</servlet-name>
+    <url-pattern>/LoginAdmin</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>Logout</servlet-name>
+    <servlet-class>com.example.servlets.Logout</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Logout</servlet-name>
+    <url-pattern>/Logout</url-pattern>
+  </servlet-mapping>
+
+
+  <servlet>
+    <servlet-name>LoginVolunteer</servlet-name>
+    <servlet-class>com.example.servlets.LoginVolunteer</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginVolunteer</servlet-name>
+    <url-pattern>/LoginVolunteer</url-pattern>
+  </servlet-mapping>
+
+
+  <servlet>
+    <servlet-name>LoginUser</servlet-name>
+    <servlet-class>com.example.servlets.LoginUser</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginUser</servlet-name>
+    <url-pattern>/LoginUser</url-pattern>
+  </servlet-mapping>
+
 </web-app>
